# ParkingSpotFinder

./: .gitignore  README.md  parking-spot-finder-plan.md  pyproject.toml  requirements.txt
configs/: example_lot.json
src/parking/: __init__.py  cli.py  eval.py  pipeline.py  train.py  types.py
src/parking/classifiers/: __init__.py  base.py  classical.py  cnn.py
src/parking/detectors/: __init__.py  base.py  matching.py  meiscf.py  yolo.py
src/parking/geometry/: __init__.py  spots.py
src/parking/output/: __init__.py  overlay.py
src/parking/sources/: __init__.py  frame_source.py
src/parking/temporal/: __init__.py  smoothing.py
src/parking/tools/: __init__.py  annotate.py
tests/: test_classifier_and_matching.py  test_coco_to_rois.py  test_eval.py  test_geometry.py  test_pipeline.py  test_pklot_xml.py  test_prepare_pklot.py  test_smoothing.py
